# mlops-final-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/agents/: dtu_mlops_agent.md
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
configs/: evaluate.yaml  train.yaml
configs/model/: default.yaml  hubert_base.yaml
data/: labels.json
data/processed/belly pain/: 357c.pt  358c.pt  359c.pt  360c.pt  361c.pt  362c.pt  363c.pt  364c.pt  365c.pt  366c.pt  367c.pt  368c.pt  369c.pt  370c.pt  371c.pt  372c.pt  373c.pt  374c.pt  375c.pt  376c.pt  377c.pt  378c.pt  379c.pt  380c.pt  381c.pt  382c.pt  383c.pt  384c.pt  385c.pt  386c.pt  387c.pt  388c.pt  389c.pt  390c.pt  391c.pt  392c.pt  393c.pt  394c.pt  395c.pt  396c.pt  (+93 more)
data/processed/burping/: 466c.pt  467c.pt  468c.pt  469c.pt  470c.pt  471c.pt  472c.pt  473c.pt  474c.pt  475c.pt  476c.pt  477c.pt  478c.pt  479c.pt  480c.pt  481c.pt  482c.pt  483c.pt  484c.pt  485c.pt  486c.pt  487c.pt  488c.pt  489c.pt  490c.pt  491c.pt  492c.pt  493c.pt  494c.pt  495c.pt  496c.pt  497c.pt  498c.pt  499c.pt  500c.pt  501c.pt  502c.pt  503c.pt  504c.pt  505c.pt  (+84 more)
data/processed/cold_hot/: 100c.pt  101c.pt  102c.pt  103c.pt  104c.pt  105c.pt  106c.pt  107c.pt  108c.pt  109c.pt  10c.pt  110c.pt  111c.pt  112c.pt  113c.pt  114c.pt  115c.pt  116c.pt  117c.pt  118c.pt  119c.pt  11c.pt  120c.pt  121c.pt  122c.pt  123c.pt  124c.pt  12c.pt  (+94 more)
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
reports/: README.md
src/project/: api.py  data.py  evaluate.py  model.py  train.py
tests/: test_api.py  test_data.py  test_evaluate.py  test_model.py  test_train.py
(+731 files in other folders)
