[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "project"
version = "0.0.1"
description = "Final project"
authors = [
  { name = "Nicklas", email = "s216137@student.dtu.dk" },
  { name = "Oliver", email = "s21xxxx@student.dtu.dk" },
  { name = "Alexander", email = "s21xxxx@student.dtu.dk" },
  { name = "Julian", email = "s21xxxx@student.dtu.dk" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "av>=16.1.0",
    "coverage>=7.13.1",
    "fastapi==0.128.0",
    "ffmpeg>=1.4",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch==2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.57.5",
    "typer==0.21.1",
    "uvicorn==0.40.0",
    "wandb>=0.24.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "markdown>=3.10",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.13",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchaudio = [
    { index = "pytorch-cpu" }
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
